# sqlx-rs

./: Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: sqlx.yml
sqlx-bench/: Cargo.toml
sqlx-cli/: Cargo.toml
sqlx-core/: Cargo.toml
sqlx-core/src/: arguments.rs
sqlx-core/src/mssql/protocol/: type_info.rs
sqlx-core/src/mssql/types/: mod.rs
sqlx-core/src/mysql/: mod.rs
sqlx-core/src/mysql/connection/: mod.rs  tls.rs
sqlx-core/src/mysql/options/: mod.rs
sqlx-core/src/net/: socket.rs  tls.rs
sqlx-core/src/postgres/: listener.rs
sqlx-core/src/postgres/connection/: describe.rs  executor.rs  mod.rs  tls.rs
sqlx-core/src/postgres/options/: mod.rs
sqlx-core/src/sqlite/options/: mod.rs
sqlx-macros/: Cargo.toml
sqlx-macros/src/: lib.rs
sqlx-macros/src/query/: args.rs  input.rs  mod.rs  output.rs
sqlx-rt/: Cargo.toml
sqlx-rt/src/: lib.rs
src/: lib.rs  macros.rs
tests/: x.py
tests/mysql/: mysql.rs
tests/postgres/: macros.rs  postgres.rs
