[package]
name = "sqlx-rt"
version = "0.1.0-pre"
repository = "https://github.com/launchbadge/sqlx"
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
runtime-actix-native-tls = [ "shared-actix", "native-tls", "tokio-native-tls" ]
runtime-async-std-native-tls = [ "shared-async-std", "native-tls", "async-native-tls" ]
runtime-tokio-native-tls = [ "shared-tokio", "native-tls", "tokio-native-tls" ]

shared-actix = [ "actix-rt", "actix-threadpool", "tokio", "once_cell" ]
shared-async-std = [ "async-std" ]
shared-tokio = [ "tokio", "once_cell" ]

[dependencies]
async-native-tls = { version = "0.3.3", optional = true }
actix-rt = { version = "1.1.1", optional = true }
actix-threadpool = { version = "0.3.2", optional = true }
async-std = { version = "1.6.0", features = [ "unstable" ], optional = true }
tokio = { version = "0.2.21", optional = true, features = [ "blocking", "fs", "tcp", "uds", "macros", "rt-core", "rt-threaded", "time", "dns", "io-util" ] }
tokio-native-tls = { version = "0.1.0", optional = true }
native-tls = { version = "0.2.4", optional = true }
once_cell = { version = "1.3", features = ["std"], optional = true }
